--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -10,7 +10,7 @@
 
 	body
 	{
-		background: #FFAE00 url('../images/bg-alt.jpg') top center no-repeat;
+		background: #ac5600 url('../images/bg-alt.jpg') top center repeat;
 		background-size: 100% auto;
 	}
 
