--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
 
 	a
 	{
-		color: #35b88f;
+		color: #00af64;
 		text-shadow: 0 0 0.5px rgba(53,184,143,0.25);
 		-moz-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
 		-webkit-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
@@ -449,7 +449,7 @@
 			position: relative;
 			display: inline-block;
 			border: 0;
-			background: #35b88f;
+			background: #00af64;
 			color: #fff;
 			text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 			cursor: pointer;
@@ -1284,7 +1284,7 @@
 		
 			#footer a:hover
 			{
-				color: #35b88f;
+				color: #00af64;
 				text-shadow: 0 0 0.5px rgba(69,200,159,0.25);
 				border-bottom-color: rgba(53,184,143,0.5);
 			}
