--- a/css/style.css
+++ b/css/style.css
@@ -532,7 +532,7 @@
 				top: -4.5em;
 				margin-left: -45px;
 				margin-top: -33px;
-				background: url('images/arrow.svg') no-repeat;
+				background: url('images/heart.svg') no-repeat;
 			}
 		
 			.box :last-child
